# ECS-Test

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_ECS.md  build.bat  build_bullet.bat  compile.bat  compile_ecs.bat  compile_ecs_physics.bat  compile_mingw.bat  find_compiler.bat  setup_deps.bat
ECS/: package-lock.json  package.json
ECS/src/: Component.ts  ComponentManager.ts  Entity.ts  EntityManager.ts  System.ts  SystemManager.ts  World.ts  index.ts  test.ts
ECS/src/components/: Health.ts  Tag.ts  Transform.ts  Velocity.ts
ECS/src/systems/: BoundsSystem.ts  HealthSystem.ts  MovementSystem.ts
OpenGLCubeRenderer/: README.md
OpenGLCubeRenderer/include/: Shader.h
OpenGLCubeRenderer/scripts/: build.bat  clean.bat  run.bat
OpenGLCubeRenderer/shaders/: cube.frag
OpenGLCubeRenderer/src/: Camera.cpp  CubeRenderer.cpp  Shader.cpp  main.cpp
include/: Camera.h  CubeRenderer.h
include/ECS/: Component.h  Entity.h  System.h  World.h
include/ECS/Components/: Collider.h  Input.h  Renderable.h  RigidBody.h  Tag.h  Transform.h  Velocity.h
include/ECS/Systems/: BoundsSystem.h  InputSystem.h  MovementSystem.h  PhysicsSystem.h  PlayerControllerSystem.h  RenderSystem.h
shaders/: cube.frag  cube.vert
src/: main_ecs.cpp
src/ECS/: Component.cpp  PhysicsSystem.cpp
